accepte se magnifique commit

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
         <h2 class="title">MY NAME IS ROMAIN</h2>
         <p class="p">ceci est mon prénom, le suivant est celui de mon/ma camarade</p>
     </div>
+    <div id="Luc">
+        <h2 class="title">Moi c'est le bo gosse lucas genre trop bo chuis riche, intelligent et extremement himble, modeste et je suis le centre de votre monde je suis dieu</h2>
+        <p class="p">ceci est mon prénom, le suivant est celui de mon/ma camarade</p>
+    </div>
+
 </body>
 </html>
