--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <h2 class="title">Moi c'est le bo gosse lucas genre trop bo chuis riche, intelligent et extremement himble, modeste et je suis le centre de votre monde je suis dieu</h2>
         <p class="p">ceci est mon prénom, le suivant est celui de mon/ma camarade</p>
     </div>
+    <div id="Trystan">
+        <h2 class="title">Je suis <strong>Trystan!</strong></h2>
+        <p class="p">ceci est mon prénom, le suivant est celui de mon/ma camarade</p>
+    </div>
 
 </body>
 </html>
