--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
         <p class="p">ceci est mon prénom, le suivant est celui de mon/ma camarade</p>
     </div>
 
+    <div class= "Amin"> <h1>MY NAME IS AMIN </h1>
+        <span>ceci est mon prénom, le suivant est celui de mon/ma camarade</span>
+</div>
+
+
 </body>
 </html>
