--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
         <p class="p">ceci est mon prénom, le suivant est celui de mon/ma camarade</p>
     </div>
 
+    <div id="kiki">
+        <h2 class="moi">My name is Aurélie</h2>
+        <p class="para">ceci est mon prénom, le suivant est celui de mon/ma camarade</p>
+    </div>
+
+
+
 </body>
 </html>
