--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PRENOMS GROUPE 2</title>
 </head>
 <body>
-    <h1>Ecrivez-vos prénoms dans une div avec un style</h1>
+    <h1>NOUS SOMMES LA PROMO SIMPLON GRAND-OUEST</h1>
     <div id="Rom">
         <h2 class="title">MY NAME IS ROMAIN</h2>
         <p class="p">ceci est mon prénom, le suivant est celui de mon/ma camarade</p>
@@ -28,7 +28,7 @@
 
     <div id="kiki">
         <h2 class="moi">My name is Aurélie</h2>
-        <p class="para">ceci est mon prénom, le suivant est celui de mon/ma camarade</p>
+        <p class="para">Nous voilà !</p>
     </div>
 
 
